--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <main>
         <input type="text" id="travelerName" placeholder="Add traveler name...">
         <button id="addTraveler" class="btn">addTraveler</button>
-        <button id="hunt" class="btn">Hunt</button>
-        <button id="eat" class="btn">Eat</button>
+        <input type="number" id="newWagonCapacity" placeholder="Add wagon capacity...">
+        <button id="createWagon">Create Wagon</button>
+       
         <button id="shouldQuarentine" class="btn">Quarentine?</button>
     </main>
     
